k8s/simpleKubernetesDemo/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: api
          image: tilenhlis/personapi:dev
---
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-ip-service
spec:
  selector:
    component: api
  ports:
  - protocol: "TCP"
    port: 6060
    targetPort: 6060
  type: LoadBalancer
