k8s/simpleKubernetesDemo/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-cluster-ip-service
                port:
                  number: 6060
